--- a/stats/08_crossval_intuition/simple_crossval_and_ml_intuition.ipynb
+++ b/stats/08_crossval_intuition/simple_crossval_and_ml_intuition.ipynb
@@ -1,6 +1,139 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![xkcd on crossval](images/xkcd_curve_fitting.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xkcd_curve_fitting.png\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's consider a scatterplot\n",
+    "* at differing levels of complexity\n",
+    "    * complexity here just means order of a polynomial\n",
+    "    * complexity can refer to number of features, width of a matrix, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_scatter_fit(num_samps=50, fit_complexity=1, degree=1):\n",
+    "    N = nump_samps\n",
+    "    np.random.seed(seed=23)\n",
+    "    \n",
+    "    # gen rand x values\n",
+    "    x = np.random.rand(N)*20\n",
+    "    \n",
+    "    # define polynomial\n",
+    "    if degree == 1:\n",
+    "        y = 5*x + 3\n",
+    "    elif degree == 2:\n",
+    "        y = 1.3*x**2 + 5*x + 3\n",
+    "    elif degree == 3:\n",
+    "        y = -0.2*x**3 + 1.3*x**2 + 5*x + 3\n",
+    "    else:\n",
+    "        y = 0.006*x**4 + -0.2*x**3 + 1.3*x**2 + 5*x + 3\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
