--- a/stats/08_crossval_intuition/simple_crossval_and_ml_intuition.ipynb
+++ b/stats/08_crossval_intuition/simple_crossval_and_ml_intuition.ipynb
@@ -54,7 +54,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def plot_scatter_fit(num_samps=50, fit_complexity=1, degree=1):\n",
-    "    N = nump_samps\n",
+    "    N = num_samps\n",
     "    np.random.seed(seed=23)\n",
     "    \n",
     "    # gen rand x values\n",
