update ti questions

--- a/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
+++ b/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
@@ -25,6 +25,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are sitting at a busy intersection. On average, two out of every 13 cars that drive by has more than one person in it. What is the probability that, in one particular set of observations, 10 out of 20 cars have more than one person?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(n):\n",
+    "    prod = 1\n",
+    "    for num in range(1, 1+n):\n",
+    "        prod *= num\n",
+    "    return prod\n",
+    "\n",
+    "def combinations(n, k):\n",
+    "    return int(factorial(n) / (factorial(n-k) * factorial(k)))\n",
+    "\n",
+    "def binomial_pmf(n, k, p=0.5):\n",
+    "    return combinations(n, k) * (p**k) * ((1-p)**(n-k))\n",
+    "\n",
+    "print(binomial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
