update ti questions

--- a/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
+++ b/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
@@ -33,9 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0002582012338133548\n"
+     ]
+    }
+   ],
    "source": [
     "def factorial(n):\n",
     "    prod = 1\n",
@@ -49,7 +57,14 @@
     "def binomial_pmf(n, k, p=0.5):\n",
     "    return combinations(n, k) * (p**k) * ((1-p)**(n-k))\n",
     "\n",
-    "print(binomial)"
+    "print(binomial_pmf(20, 10, p=(2/13)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write and solve a new binomial problem"
    ]
   },
   {
@@ -57,14 +72,82 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "new_binomial_problem\n",
+    "10 out of 14 people wear a mask outside\n",
+    "what is the probability 5 out of 10 people are wearing a mask outside?\n",
+    "'''\n",
+    "print(binomial_pmf(10, 5, 10/14))\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "At local pizza parlor, 4 of every 10 custom orders includes pepperoni.  \n",
+    "For the next 13 orders placed, what is the probability that \n",
+    "8 of them will include pepperoni?\n",
+    "'''\n",
+    "print(binomial_pmf(13, 8, .4))\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "Ronaldo scores 1 out of 7 chances. What is the chance that \n",
+    "Ronaldo scores 4 goals in 50 chances?\n",
+    "'''\n",
+    "print(binomial_pmf(50,4,p=(1/7)))\n",
+    "# 0.07986370518112325\n",
+    "\n",
+    "\n",
+    "# On average it snows 2 days a week in February. \n",
+    "# What is the probability that it will snow on 10 days next February?\n",
+    "print(binomial_pmf(n=28, k=10, p=2/7)) # = .11\n",
+    "\n",
+    "\n",
+    "\"\"\"You are hunting for the rare 5 leaf clover. \n",
+    "The average clover has 3 leaves at a rate of 73%.\n",
+    "2/1600 clovers have 5 leaves. What is the probability \n",
+    "you found one 5 leaf clover out of 1200.\"\"\"\n",
+    "print(binomial_pmf(1200, 1, (2/1600)))\n",
+    "# 0.33479984880218155\n",
+    "\n",
+    "\n",
+    "#If three out of 10 customers purchase an item when \n",
+    "# they walk into a store, what is that probability \n",
+    "# that 7 out of 10 customers purchase an item\n",
+    "print(binomial_pmf(10, 7, 3/10))\n",
+    "# 0.009001691999999995\n",
+    "\n",
+    "\n",
+    "'''A given coffee shop sees a constant flow of visitors. \n",
+    "Every morning, on average, 15/20 patrons buy croissants.\n",
+    "What is the probability that one morning, \n",
+    "18/20 visitors buy croissants?'''\n",
+    "binomial_pmf(20, 18, p = 15/20)\n",
+    "\n",
+    "\n",
+    "'''On average, 4 out of 10 people wear masks at the store.  \n",
+    "What is the probability that on\n",
+    "one day at the store, 8 of the 50 people wore a mask?'''\n",
+    "binomial_pmf(50, 8, p = 0.4)\n",
+    "\n",
+    "\n",
+    "# On average 3 out of every 13 kids like tuna. \n",
+    "# If you randomly select 30 kids, \n",
+    "# what is the probability that 12 of them like tuna?\n",
+    "print(binomial_pmf(30, 12, 3/13)) #0.017544321532988943\n",
+    "\n",
+    "\n",
+    "'''On average, it rains in California 10 days out of the year. \n",
+    "What is the probability that it will rain 20 days next \n",
+    "year in California '''\n",
+    "print(binomial_pmf(365, 20, 10/365)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Forty cars pass by a busy street every 2 minutes during lunch hour. What is the probability that Fifty cars pass by in 3 minutes during lunch hour?"
+   ]
   }
  ],
  "metadata": {
