update ti questions

--- a/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
+++ b/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
@@ -139,7 +139,17 @@
     "'''On average, it rains in California 10 days out of the year. \n",
     "What is the probability that it will rain 20 days next \n",
     "year in California '''\n",
-    "print(binomial_pmf(365, 20, 10/365)"
+    "print(binomial_pmf(365, 20, 10/365)\n",
+    "\n",
+    "      \n",
+    "\n",
+    "\"\"\"\n",
+    "You are observing a par three. Assuming every golfer is a pro. \n",
+    "1 out of every 95  golfers make\n",
+    "a hole in 1. What are the chance you observe 2 holes in 1 \n",
+    "if you only watch 30 golfers. \n",
+    "\"\"\"\n",
+    "print(binomial_pmf(30, 2, 1/95)"
    ]
   },
   {
@@ -148,6 +158,123 @@
    "source": [
     "Forty cars pass by a busy street every 2 minutes during lunch hour. What is the probability that Fifty cars pass by in 3 minutes during lunch hour?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.023271197528281395"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import e\n",
+    "def poisson_pmf(lmbda, k):\n",
+    "    return (lmbda**k * e**(-lmbda)) / factorial(k)\n",
+    "\n",
+    "lmbda = 40 * 3/2\n",
+    "\n",
+    "poisson_pmf(lmbda, 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write and solve a new Poisson problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "On the weekend, during lunchtime, 50 people enter the trailhead \n",
+    "in an hour.\n",
+    "What is the probability that 60 people will enter the trailhead \n",
+    "in two hours?\n",
+    "'''\n",
+    "print(poisson_pmf(100, 60))\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "Cars run a red light at a rate of 3 per 45 minutes.  \n",
+    "What is the prob that 8 cars run \n",
+    "redlight in next 2 hours?\n",
+    "'''\n",
+    "print(poisson_pmf(3*120/45, 8))\n",
+    "# 0.13958653195059698\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "Sitting on a street corner regularly,\n",
+    "you've noticed that on avergage, 2 runners go by every 10 minutes\n",
+    "What is the probability you would see 3 runners in an hour?\n",
+    "'''\n",
+    "lmbda = 12\n",
+    "k = 3\n",
+    "print(poisson_pmf(lmbda, k))\n",
+    "\n",
+    "\n",
+    "'''On average an NBA team scores 10 points in 5 minutes. \n",
+    "What is the probability that they will score 130 point in 60 minutes?\n",
+    "'''\n",
+    "lmbda = 120\n",
+    "k = 130\n",
+    "print (poisson_pmf(lmbda, k))\n",
+    "#0.02330939500998483\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "Ten Youtube videos are uploaded every 5 seconds. \n",
+    "What is the probability that 15 videos are not uploaded in 10 seconds?\n",
+    "'''\n",
+    "lmbda = 10 * 10/5\n",
+    "k = 15\n",
+    "print(1 - poisson_pmf(lmbda, k))\n",
+    "\n",
+    "\n",
+    "'''My neighbors dog barked 10 times in the last 5 minutes. \n",
+    "If he keeps barking at this rate, what is the probability \n",
+    "that he will bark 27 times over the next 15 minutes?\n",
+    "'''\n",
+    "poisson_pmf(lam=30, k = 27) # = .065\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "In Moore County on election day, an average of 20 voters \n",
+    "successfully submit their ballot per hour.  \n",
+    "What is the probability that 100 voters will submit their \n",
+    "ballot in 4 hours/\n",
+    "'''\n",
+    "print(poisson_pmf(80, 100))\n",
+    "# 0.003939458159199277\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "10 birds pass by a my window every 5 minutes during in the \n",
+    "afternoon. What is the probability that 30 birds pass by \n",
+    "10 minutes this afternoon?\n",
+    "'''\n",
+    "poisson_pmf(lmbda=20, k=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
