update ti questions

--- a/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
+++ b/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
@@ -270,11 +270,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "Consider a random variable $Z$.\n",
+    "\n",
+    "$Z = 0$ :  When the sum of a 6 sided die and a 36 sided die is even.\n",
+    "\n",
+    "$Z = 1$ :  When the sum of a 6 sided die and a 36 sided die is odd.\n",
+    "\n",
+    "What is the probability that three successive dice rolls result in this sequence of outcomes:\n",
+    "$Z=1, Z=1, Z=0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108\n",
+      "108\n",
+      "0.125\n"
+     ]
+    }
+   ],
+   "source": [
+    "outcomes_distr = []\n",
+    "\n",
+    "for i in range(1, 6+1):\n",
+    "    for j in range(1, 36+1):\n",
+    "        if (i+j) % 2 == 0:\n",
+    "            outcomes_distr.append(0)\n",
+    "        else:\n",
+    "            outcomes_distr.append(1)\n",
+    "            \n",
+    "print(outcomes_distr.count(0))\n",
+    "print(outcomes_distr.count(1))\n",
+    "\n",
+    "print(0.5**3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "Consider a 4 trit list of trinary.\n",
+    "\n",
+    "$Y = 0$ :  When the sum of the 4 trit trinary is 0.\n",
+    "\n",
+    "$Y = 1$ :  When the sum of the trinary is greater than 0.\n",
+    "\n",
+    "What is the probability that three successive outcomes of Y are:\n",
+    "$Y=1, Y=1, Y=0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 1, 2, 3, 2, 3, 4, 1, 2, 3, 2, 3, 4, 3, 4, 5, 2, 3, 4, 3, 4, 5, 4, 5, 6, 1, 2, 3, 2, 3, 4, 3, 4, 5, 2, 3, 4, 3, 4, 5, 4, 5, 6, 3, 4, 5, 4, 5, 6, 5, 6, 7, 2, 3, 4, 3, 4, 5, 4, 5, 6, 3, 4, 5, 4, 5, 6, 5, 6, 7, 4, 5, 6, 5, 6, 7, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "outcomes = []\n",
+    "\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        for k in range(3):\n",
+    "            for l in range(3):\n",
+    "                outcomes.append(sum([i,j,k,l]))\n",
+    "                \n",
+    "print(outcomes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P(𝑌=0) = 0.01234"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.012037327880904"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# P(𝑌=0) = 1 / len(outcomes)\n",
+    "(1 - 0.01234) * (1 - 0.01234) * (0.01234)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "Consider a random variable $A$\n",
+    "\n",
+    "$A$ is the result of 6 dice rolls processed according to this algorithm:\n",
+    "\n",
+    "$$\n",
+    "\\sum_{i=1}^n roll_i \\times \\frac{1}{2}^\\frac{i}{6}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "What is the probability that:\n",
+    "\n",
+    "$A$ <= 5\n",
+    "\n",
+    "$A$ > 10\n",
+    "\n",
+    "\n",
+    "How would you approach analyzing the distribution of these outcomes?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00015003429355281208\n",
+      "0.928605109739369\n"
+     ]
+    }
+   ],
+   "source": [
+    "def roll_math(lst):\n",
+    "    out = 0.0\n",
+    "    \n",
+    "    for i, roll in enumerate(lst, 1):\n",
+    "        out += roll * (1/2)**(i/6)\n",
+    "        \n",
+    "    return out\n",
+    "\n",
+    "rolls = []\n",
+    "\n",
+    "for r1 in range(1, 6+1):\n",
+    "    for r2 in range(1, 6+1):\n",
+    "        for r3 in range(1, 6+1):\n",
+    "            for r4 in range(1, 6+1):\n",
+    "                for r5 in range(1, 6+1):\n",
+    "                    for r6 in range(1, 6+1):\n",
+    "                        rolls.append(roll_math([r1, r2, r3, r4, r5, r6]))\n",
+    "                        \n",
+    "\n",
+    "le_5 = []      \n",
+    "for roll in rolls:\n",
+    "    if roll <= 5:\n",
+    "        le_5.append(roll)\n",
+    "        \n",
+    "print(len(le_5) / len(rolls))\n",
+    "\n",
+    "print(len([roll for roll in rolls if roll > 10]) / len(rolls))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "Write a function called `roll_die` that returns a roll from a 6-sided die"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import choice\n",
+    "\n",
+    "def roll_die():\n",
+    "    return choice([1,2,3,4,5,6])\n",
+    "\n",
+    "roll_die()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "\n",
+    "Write a function called `roll_die_n_times` that returns a list containing the results of `n` rolls of a 6-sided die. Default to `n=6`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def roll_die_n_times(n=6):\n",
+    "    return [roll_die() for _ in range(n)]"
+   ]
   }
  ],
  "metadata": {
