update ti questions

--- a/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
+++ b/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
@@ -497,12 +497,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 2, 4, 6, 1]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def roll_die_n_times(n=6):\n",
+    "    return [roll_die() for _ in range(n)]\n",
+    "\n",
+    "roll_die_n_times()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "Write two functions, called `process_dice_rolls` and `dice_roll_math`. `process_dice_rolls` should have a single parameter `n`, representing the number of dice rolls. It should call out to `roll_die_n_times` and then pass that list into `dice_roll_math` to complete the following mathematical operation:\n",
+    "\n",
+    "if the sum of the dice rolls is even:\n",
+    "\n",
+    "$$\n",
+    "\\sum_{i=1}^n roll_i \\times \\frac{1}{2}^\\frac{i}{6}\n",
+    "$$\n",
+    "\n",
+    "if the sum of the dice rolls is odd:\n",
+    "\n",
+    "$$\n",
+    "\\sum_{i=1}^n roll_i \\times \\frac{1}{3}^\\frac{i}{3}\n",
+    "$$\n",
+    "\n",
+    "Both `process_dice_rolls` and `dice_roll_math` should return the scalar value that is the result of the above operation. `process_dice_rolls` should also return the list of dice roll sums that generated that scalar value"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def roll_die_n_times(n=6):\n",
-    "    return [roll_die() for _ in range(n)]"
+    "def dice_roll_math(rolls):\n",
+    "    out = 0.0\n",
+    "    \n",
+    "    return out\n",
+    "    \n",
+    "    \n",
+    "def process_dice_rolls(n=6):\n",
+    "    rolls = roll_die_n_times(n=n)\n",
+    "    \n",
+    "    \n",
+    "    return out, rolls"
    ]
   }
  ],
