update ti questions

--- a/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
+++ b/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
@@ -542,21 +542,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17.651810503079652, [5, 3, 6, 3, 3, 6])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def dice_roll_math(rolls):\n",
     "    out = 0.0\n",
     "    \n",
+    "    for i, roll in enumerate(rolls, 1):\n",
+    "        if sum(rolls) % 2 == 0:\n",
+    "            out += roll * (1/2)**(i/6)\n",
+    "        else:\n",
+    "            out += roll * (1/3)**(i/3)\n",
     "    return out\n",
     "    \n",
     "    \n",
     "def process_dice_rolls(n=6):\n",
     "    rolls = roll_die_n_times(n=n)\n",
+    "    out = dice_roll_math(rolls)\n",
+    "    return out, rolls\n",
+    "\n",
+    "process_dice_rolls(n=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function called `get_max_and_min` that simply estimates the min and max from our random number process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.12103706371525, 24.49738544647866)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_max_and_min(n=6, num_trials=100000):\n",
+    "    samples = []\n",
     "    \n",
-    "    \n",
-    "    return out, rolls"
+    "    for _ in range(num_trials):\n",
+    "        samples.append(process_dice_rolls(n=n)[0])\n",
+    "        \n",
+    "    return min(samples), max(samples)\n",
+    "\n",
+    "get_max_and_min(n=6)"
    ]
   }
  ],
