--- a/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
+++ b/stats/09_preparing_for_ti/Interview_Style_Questions.ipynb
@@ -13,6 +13,7 @@
     "    * Basic Probability/Simple Conditional Probability\n",
     "    * Random Variable definitions\n",
     "* Understanding binary through the lens of a series of independent trials\n",
+    "    * not included here, but good to consider\n",
     "* Coding mathematical formulations\n",
     "* Dictionaries\n",
     "    * Packing values into dictionaries\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-011aa7568f84>, line 76)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-011aa7568f84>\"\u001b[0;36m, line \u001b[0;32m76\u001b[0m\n\u001b[0;31m    \"\"\"\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "new_binomial_problem\n",
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +180,7 @@
        "0.023271197528281395"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,9 +204,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.4707147428753295e-06\n",
+      "0.13958653195059698\n",
+      "0.0017695331577585259\n",
+      "0.02330939500998483\n",
+      "0.9483511464682416\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "poisson_pmf() got an unexpected keyword argument 'lam'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m----------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m    Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-4b2ab165195f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0mthat\u001b[0m \u001b[0mhe\u001b[0m \u001b[0mwill\u001b[0m \u001b[0mbark\u001b[0m \u001b[0;36m27\u001b[0m \u001b[0mtimes\u001b[0m \u001b[0mover\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mnext\u001b[0m \u001b[0;36m15\u001b[0m \u001b[0mminutes\u001b[0m\u001b[0;31m?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m '''\n\u001b[0;32m---> 51\u001b[0;31m \u001b[0mpoisson_pmf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlam\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m27\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# = .065\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: poisson_pmf() got an unexpected keyword argument 'lam'"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "On the weekend, during lunchtime, 50 people enter the trailhead \n",
@@ -286,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +406,7 @@
        "0.012037327880904"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -463,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +505,7 @@
        "1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,16 +530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3, 2, 4, 6, 1]"
+       "[4, 4, 2, 2, 2, 2]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,16 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(17.651810503079652, [5, 3, 6, 3, 3, 6])"
+       "(10.085935175345385, [5, 6, 4, 5, 5, 4])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,16 +618,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2.12103706371525, 24.49738544647866)"
+       "(2.4783364712385776, 28.36063238987583)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,8 +641,375 @@
     "        \n",
     "    return min(samples), max(samples)\n",
     "\n",
-    "get_max_and_min(n=6)"
+    "get_max_and_min(n=8)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "\n",
+    "Write a function called `analyze_dice_sums` that calls out to `process_dice_rolls` `num_samples=1000` times. Also include a parameter for the length of your dice roll list. Your function should return a dictionary where the keys represent integer buckets, named by the f-string convention: `f'2 <= x < 3'`, aka `f'{idx} <= x < {idx+1}'`. The associated values should be lists of lists, containing the rolls that generated numbers in those buckets.\n",
+    "\n",
+    "Note that you will need to use your max and min function to determine the high and low values for your dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 <= x < 3: 2\n",
+      "    [1, 1, 1, 2, 1, 3]\n",
+      "    [2, 1, 1, 1, 1, 1]\n",
+      "3 <= x < 4: 18\n",
+      "    [2, 2, 2, 1, 1, 3]\n",
+      "    [1, 2, 1, 4, 5, 2]\n",
+      "    [1, 1, 3, 1, 4, 5]\n",
+      "    [1, 1, 2, 1, 4, 4]\n",
+      "    [1, 1, 3, 3, 3, 4]\n",
+      "    [2, 1, 1, 3, 2, 6]\n",
+      "    [1, 2, 1, 1, 5, 3]\n",
+      "    [1, 1, 1, 3, 1, 6]\n",
+      "    [1, 1, 3, 3, 3, 2]\n",
+      "    [2, 1, 1, 2, 6, 1]\n",
+      "4 <= x < 5: 47\n",
+      "    [2, 1, 2, 6, 1, 3]\n",
+      "    [2, 3, 2, 2, 1, 1]\n",
+      "    [2, 2, 2, 1, 6, 6]\n",
+      "    [2, 1, 4, 2, 5, 1]\n",
+      "    [2, 1, 4, 1, 5, 2]\n",
+      "    [1, 5, 1, 1, 6, 3]\n",
+      "    [1, 2, 1, 4, 5, 6]\n",
+      "    [1, 1, 3, 5, 6, 3]\n",
+      "    [1, 4, 1, 1, 5, 3]\n",
+      "    [2, 1, 3, 5, 4, 2]\n",
+      "5 <= x < 6: 80\n",
+      "    [1, 6, 3, 1, 4, 4]\n",
+      "    [3, 2, 5, 1, 5, 1]\n",
+      "    [4, 1, 2, 3, 3, 6]\n",
+      "    [3, 1, 2, 6, 4, 1]\n",
+      "    [2, 5, 1, 2, 4, 1]\n",
+      "    [5, 1, 1, 1, 4, 3]\n",
+      "    [2, 3, 3, 3, 5, 1]\n",
+      "    [1, 6, 5, 1, 1, 1]\n",
+      "    [2, 6, 2, 1, 1, 3]\n",
+      "    [3, 2, 3, 5, 2, 4]\n",
+      "6 <= x < 7: 109\n",
+      "    [2, 5, 4, 3, 4, 3]\n",
+      "    [3, 2, 3, 3, 6, 6]\n",
+      "    [5, 2, 1, 4, 4, 5]\n",
+      "    [2, 4, 5, 1, 6, 3]\n",
+      "    [5, 2, 1, 1, 6, 6]\n",
+      "    [3, 2, 6, 3, 1, 6]\n",
+      "    [1, 2, 6, 5, 6, 3]\n",
+      "    [1, 5, 4, 3, 6, 2]\n",
+      "    [3, 3, 2, 6, 3, 4]\n",
+      "    [1, 6, 4, 1, 6, 3]\n",
+      "7 <= x < 8: 103\n",
+      "    [2, 6, 5, 2, 5, 1]\n",
+      "    [3, 5, 4, 4, 3, 2]\n",
+      "    [5, 2, 5, 1, 2, 4]\n",
+      "    [2, 6, 5, 4, 3, 1]\n",
+      "    [6, 1, 3, 5, 1, 1]\n",
+      "    [5, 2, 3, 5, 6, 2]\n",
+      "    [4, 3, 6, 3, 6, 1]\n",
+      "    [3, 5, 1, 6, 6, 4]\n",
+      "    [5, 2, 6, 1, 1, 2]\n",
+      "    [6, 1, 4, 5, 3, 2]\n",
+      "8 <= x < 9: 94\n",
+      "    [4, 1, 1, 2, 3, 1]\n",
+      "    [6, 4, 3, 5, 2, 1]\n",
+      "    [5, 3, 3, 6, 1, 5]\n",
+      "    [6, 4, 2, 3, 3, 1]\n",
+      "    [4, 5, 3, 4, 6, 1]\n",
+      "    [6, 1, 6, 1, 6, 3]\n",
+      "    [5, 6, 2, 3, 4, 5]\n",
+      "    [6, 4, 1, 2, 5, 5]\n",
+      "    [6, 1, 6, 2, 6, 4]\n",
+      "    [6, 1, 6, 1, 3, 6]\n",
+      "9 <= x < 10: 63\n",
+      "    [3, 2, 3, 2, 2, 2]\n",
+      "    [6, 4, 6, 4, 1, 2]\n",
+      "    [5, 5, 5, 5, 4, 5]\n",
+      "    [1, 6, 1, 3, 1, 2]\n",
+      "    [6, 4, 1, 6, 6, 6]\n",
+      "    [6, 5, 5, 1, 2, 6]\n",
+      "    [4, 5, 6, 5, 1, 6]\n",
+      "    [6, 6, 1, 2, 6, 2]\n",
+      "    [2, 2, 1, 1, 6, 2]\n",
+      "    [5, 4, 5, 6, 5, 2]\n",
+      "10 <= x < 11: 49\n",
+      "    [5, 2, 1, 1, 2, 3]\n",
+      "    [6, 6, 6, 3, 1, 3]\n",
+      "    [3, 4, 1, 1, 1, 6]\n",
+      "    [6, 6, 5, 3, 1, 6]\n",
+      "    [3, 1, 2, 5, 1, 4]\n",
+      "    [2, 1, 2, 3, 2, 6]\n",
+      "    [6, 6, 6, 2, 3, 6]\n",
+      "    [2, 1, 5, 1, 4, 3]\n",
+      "    [6, 6, 5, 2, 2, 6]\n",
+      "    [1, 2, 5, 6, 1, 1]\n",
+      "11 <= x < 12: 52\n",
+      "    [2, 1, 6, 4, 1, 4]\n",
+      "    [3, 3, 1, 6, 1, 2]\n",
+      "    [1, 2, 2, 4, 5, 4]\n",
+      "    [2, 5, 2, 3, 1, 3]\n",
+      "    [6, 5, 6, 6, 4, 4]\n",
+      "    [1, 3, 4, 2, 4, 4]\n",
+      "    [2, 4, 3, 3, 2, 2]\n",
+      "    [2, 3, 5, 2, 2, 2]\n",
+      "    [1, 4, 4, 2, 5, 2]\n",
+      "    [4, 1, 3, 1, 3, 6]\n",
+      "12 <= x < 13: 64\n",
+      "    [1, 1, 5, 5, 3, 5]\n",
+      "    [4, 6, 2, 1, 1, 4]\n",
+      "    [4, 2, 2, 1, 5, 4]\n",
+      "    [6, 2, 1, 4, 1, 4]\n",
+      "    [1, 3, 2, 6, 6, 2]\n",
+      "    [2, 6, 3, 2, 4, 1]\n",
+      "    [3, 6, 2, 3, 3, 1]\n",
+      "    [1, 3, 6, 3, 4, 1]\n",
+      "    [5, 1, 2, 4, 5, 1]\n",
+      "    [4, 1, 4, 3, 4, 2]\n",
+      "13 <= x < 14: 62\n",
+      "    [2, 4, 5, 4, 1, 4]\n",
+      "    [3, 1, 6, 2, 5, 3]\n",
+      "    [5, 5, 1, 1, 4, 2]\n",
+      "    [3, 2, 6, 1, 5, 3]\n",
+      "    [1, 2, 6, 3, 5, 5]\n",
+      "    [6, 1, 2, 6, 1, 4]\n",
+      "    [2, 4, 5, 1, 5, 3]\n",
+      "    [5, 4, 3, 1, 3, 2]\n",
+      "    [3, 3, 6, 2, 1, 5]\n",
+      "    [3, 5, 2, 6, 2, 2]\n",
+      "14 <= x < 15: 57\n",
+      "    [5, 3, 3, 3, 3, 3]\n",
+      "    [4, 2, 4, 6, 3, 3]\n",
+      "    [3, 2, 6, 1, 4, 6]\n",
+      "    [3, 1, 5, 5, 3, 5]\n",
+      "    [2, 5, 1, 6, 6, 2]\n",
+      "    [3, 5, 1, 3, 6, 4]\n",
+      "    [4, 3, 1, 5, 5, 4]\n",
+      "    [1, 5, 6, 4, 2, 4]\n",
+      "    [6, 2, 5, 1, 4, 2]\n",
+      "    [1, 4, 3, 5, 6, 3]\n",
+      "15 <= x < 16: 61\n",
+      "    [6, 4, 4, 4, 1, 3]\n",
+      "    [2, 6, 4, 4, 3, 3]\n",
+      "    [3, 3, 6, 1, 5, 6]\n",
+      "    [2, 4, 5, 2, 6, 5]\n",
+      "    [1, 4, 4, 3, 6, 6]\n",
+      "    [1, 5, 3, 5, 6, 4]\n",
+      "    [5, 3, 4, 6, 3, 1]\n",
+      "    [4, 2, 4, 5, 4, 5]\n",
+      "    [2, 4, 5, 5, 4, 4]\n",
+      "    [3, 3, 5, 6, 2, 5]\n",
+      "16 <= x < 17: 52\n",
+      "    [6, 4, 2, 1, 5, 6]\n",
+      "    [5, 4, 2, 4, 5, 4]\n",
+      "    [1, 6, 5, 4, 6, 2]\n",
+      "    [1, 4, 6, 4, 6, 5]\n",
+      "    [4, 4, 5, 5, 2, 4]\n",
+      "    [6, 4, 4, 2, 5, 3]\n",
+      "    [4, 2, 4, 5, 6, 5]\n",
+      "    [1, 5, 6, 3, 5, 6]\n",
+      "    [5, 2, 6, 5, 3, 3]\n",
+      "    [3, 5, 4, 6, 1, 5]\n",
+      "17 <= x < 18: 39\n",
+      "    [5, 6, 2, 5, 2, 6]\n",
+      "    [3, 6, 5, 6, 4, 2]\n",
+      "    [6, 1, 2, 6, 6, 5]\n",
+      "    [1, 6, 6, 6, 5, 2]\n",
+      "    [5, 6, 3, 6, 3, 1]\n",
+      "    [2, 6, 4, 3, 5, 6]\n",
+      "    [6, 5, 4, 2, 4, 3]\n",
+      "    [6, 5, 3, 2, 4, 6]\n",
+      "    [5, 5, 3, 6, 2, 5]\n",
+      "    [3, 5, 6, 2, 5, 5]\n",
+      "18 <= x < 19: 22\n",
+      "    [4, 6, 5, 6, 3, 2]\n",
+      "    [6, 4, 6, 1, 5, 4]\n",
+      "    [4, 4, 6, 5, 5, 4]\n",
+      "    [5, 5, 4, 5, 4, 3]\n",
+      "    [5, 2, 6, 6, 5, 4]\n",
+      "    [6, 5, 4, 4, 2, 5]\n",
+      "    [4, 6, 5, 5, 5, 1]\n",
+      "    [6, 4, 6, 6, 1, 3]\n",
+      "    [6, 6, 2, 6, 3, 3]\n",
+      "    [4, 6, 5, 4, 3, 4]\n",
+      "19 <= x < 20: 11\n",
+      "    [3, 4, 6, 5, 6, 6]\n",
+      "    [5, 6, 5, 5, 6, 1]\n",
+      "    [3, 6, 6, 6, 6, 1]\n",
+      "    [4, 6, 6, 5, 1, 6]\n",
+      "    [6, 6, 5, 5, 1, 5]\n",
+      "    [4, 6, 5, 4, 5, 4]\n",
+      "    [6, 2, 4, 6, 6, 6]\n",
+      "    [5, 6, 6, 3, 4, 4]\n",
+      "    [5, 4, 6, 5, 3, 5]\n",
+      "    [6, 6, 4, 2, 6, 4]\n",
+      "20 <= x < 21: 9\n",
+      "    [6, 5, 5, 5, 6, 3]\n",
+      "    [5, 4, 6, 3, 6, 6]\n",
+      "    [5, 5, 6, 5, 4, 5]\n",
+      "    [6, 6, 6, 3, 4, 5]\n",
+      "    [5, 5, 6, 5, 5, 4]\n",
+      "    [5, 5, 6, 5, 5, 4]\n",
+      "    [6, 4, 5, 5, 4, 6]\n",
+      "    [6, 5, 6, 5, 3, 5]\n",
+      "    [5, 6, 5, 6, 2, 6]\n",
+      "21 <= x < 22: 5\n",
+      "    [3, 6, 6, 6, 6, 5]\n",
+      "    [4, 5, 5, 6, 6, 6]\n",
+      "    [4, 6, 6, 6, 6, 4]\n",
+      "    [6, 2, 6, 6, 6, 6]\n",
+      "    [6, 6, 3, 5, 6, 6]\n",
+      "22 <= x < 23: 1\n",
+      "    [6, 6, 6, 5, 4, 5]\n",
+      "23 <= x < 24: 0\n",
+      "24 <= x < 25: 0\n",
+      "25 <= x < 26: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def analyze_dice_sums(n=6, num_samples=1000):\n",
+    "    d = dict()\n",
+    "    \n",
+    "    min_, max_ = get_max_and_min(n=n)\n",
+    "    \n",
+    "    # prime the dict\n",
+    "    for i in range(int(min_), int(max_)+2):\n",
+    "        d[f'{i} <= x < {i+1}'] = []\n",
+    "        \n",
+    "    \n",
+    "    for _ in range(num_samples):\n",
+    "        res, lst = process_dice_rolls(n)\n",
+    "        res_int = int(res)\n",
+    "        \n",
+    "        d[f'{res_int} <= x < {res_int+1}'].append(lst)\n",
+    "        \n",
+    "    return d\n",
+    "\n",
+    "for k, v in analyze_dice_sums(n=6, num_samples=1000).items():\n",
+    "    print(f'{k}: {len(v)}')\n",
+    "    for lst in v[:10]:\n",
+    "        print(f'    {lst}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function called `dice_sum_counts` that utilizes the same keys as the previous function, but instead of lists of lists as values, simply provides the counts for items in each bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dice_sum_counts(n=6, num_samples=1000):\n",
+    "    d = analyze_dice_sums(n, num_samples)\n",
+    "    \n",
+    "    for k, lst in d.items():\n",
+    "        d[k] = len(lst)\n",
+    "        \n",
+    "    return d\n",
+    "\n",
+    "# dice_sum_counts(n=6, num_samples=1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function called `estimate_dice_probas` that calls out to `dice_sum_counts` `num_experiments=1000` times. The function should average the counts for each set of keys and return the estimated probability that randomly generated numbers fall into each of those buckets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'2 <= x < 3': 0.00134,\n",
+       " '3 <= x < 4': 0.01326,\n",
+       " '4 <= x < 5': 0.04264,\n",
+       " '5 <= x < 6': 0.08106000000000001,\n",
+       " '6 <= x < 7': 0.11159999999999999,\n",
+       " '7 <= x < 8': 0.114,\n",
+       " '8 <= x < 9': 0.09362000000000001,\n",
+       " '9 <= x < 10': 0.06401000000000001,\n",
+       " '10 <= x < 11': 0.04451,\n",
+       " '11 <= x < 12': 0.0445,\n",
+       " '12 <= x < 13': 0.05618,\n",
+       " '13 <= x < 14': 0.06395,\n",
+       " '14 <= x < 15': 0.06658,\n",
+       " '15 <= x < 16': 0.06146,\n",
+       " '16 <= x < 17': 0.051840000000000004,\n",
+       " '17 <= x < 18': 0.03842,\n",
+       " '18 <= x < 19': 0.02413,\n",
+       " '19 <= x < 20': 0.015050000000000001,\n",
+       " '20 <= x < 21': 0.00795,\n",
+       " '21 <= x < 22': 0.00277,\n",
+       " '22 <= x < 23': 0.00076,\n",
+       " '23 <= x < 24': 0.00035999999999999997,\n",
+       " '24 <= x < 25': 1e-05,\n",
+       " '25 <= x < 26': 0.0}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def estimate_dice_probas(n=6, num_samples=1000, num_experiments=1000):\n",
+    "    d = dict()\n",
+    "    \n",
+    "    for i in range(num_experiments):\n",
+    "        print(i, end = ' ')\n",
+    "        d_trial = dice_sum_counts(n, num_samples)\n",
+    "        \n",
+    "        for k, v in d_trial.items():\n",
+    "            if k not in d:\n",
+    "                d[k] = []\n",
+    "            \n",
+    "            d[k].append(v)\n",
+    "            \n",
+    "    for k, v in d.items():\n",
+    "        d[k] = (sum(v) / len(v) / num_samples)\n",
+    "        \n",
+    "    return d\n",
+    "\n",
+    "estimate_dice_probas(n=6, num_samples=1000, num_experiments=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
